--- a/paper/references.bib
+++ b/paper/references.bib
@@ -79,6 +79,14 @@ https://github.com/sharlagelfand/opendatatoronto/},
   url = {https://CRAN.R-project.org/package=ggplot2},
 }
 
+@Manual{randomNames,
+  title = {randomNames: Generate Random Names},
+  author = {Randall Pruim},
+  year = {2023},
+  note = {R package version 1.6.0.0},
+  url = {https://CRAN.R-project.org/package=randomNames},
+}
+
 @Misc{ChatGPT,
   author = {OpenAI},
   title = {ChatGPT: {L}anguage model},
